# difsim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  counter.h  discretization.cpp  discretization.h  main.cpp  matrix.h  point.h  types.h
2d/curves/: curve.cpp  curve.h  discretize_curve.cpp  discretize_curve.h
2d/epolarization/: e_core.cpp  e_core.h  field_solver.cpp  field_solver.h
2d/fields/: field.cpp  field.h
2d/hpolarization/: core.cpp  core.h  h_core.cpp  matrix_discretization.h  test.h
math/: chebyshev.h  hankel.h  simple_math.h
templates/: prototype.h
